RESOLVED FIXED140504
REGRESSION (r178452): Visited link coloring only appears to work in the first web process
https://bugs.webkit.org/show_bug.cgi?id=140504
Summary REGRESSION (r178452): Visited link coloring only appears to work in the first...
Mark Rowe (bdash)
Reported 2015-01-15 11:51:46 PST
When browsing Reddit this morning with tip of tree WebKit I'm seeing that links I'm clicking aren't being colored as visited. They are correctly being added to history though. If I relaunch Safari and load only http://reddit.com/ then I see the links as colored. If I open a second tab to the same page, it shows no links colored as visited. Steps to reproduce: 1) Launch Safari to http://reddit.com/. 2) Click on a few links. 3) Open a new tab to http://reddit.com/ Results: The links visited in step 2 are not colored as visited in the tab opened in step 3, but are in the tab opened in step 1.
Attachments
Patch (9.44 KB, patch)
2015-01-19 18:33 PST, Mark Rowe (bdash)
no flags
Radar WebKit Bug Importer
Comment 1 2015-01-15 11:52:40 PST
Mark Rowe (bdash)
Comment 2 2015-01-19 18:33:45 PST
WebKit Commit Bot
Comment 3 2015-01-19 19:46:00 PST
Comment on attachment 244950 [details] Patch Clearing flags on attachment: 244950 Committed r178690: <http://trac.webkit.org/changeset/178690>
WebKit Commit Bot
Comment 4 2015-01-19 19:46:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.