Source/WebKit2/UIProcess/VisitedLinkProvider.h
@@ -47,6 +47,9 @@ public:
 
     uint64_t identifier() const { return m_identifier; }
 
+    void addProcess(WebProcessProxy&);
+    void removeProcess(WebProcessProxy&);
+
     void addVisitedLinkHash(WebCore::LinkHash);
     void removeAll();
 
@@ -67,7 +70,9 @@ private:
     void resizeTable(unsigned newTableSize);
     void sendTable(WebProcessProxy&);
 
-    const uint64_t m_identifier;
+    HashSet<WebProcessProxy*> m_processes;
+
+    uint64_t m_identifier;
 
     unsigned m_keyCount;
     unsigned m_tableSize;
